// Copyright 2021 Harald Albrecht.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package watcher

import (
	"context"
	"sync"
	"time"

	"github.com/thediveo/whalewatcher"
	"github.com/thediveo/whalewatcher/engineclient"
)

// Watcher allows keeping track of the currently alive containers of a container
// engine, optionally with the composer projects they're associated with (if
// supported).
type Watcher interface {
	Portfolio() *whalewatcher.Portfolio
	Watch(ctx context.Context)
	ID(ctx context.Context) string

	Close()
}

// watcher watches a Docker daemon for containers to become alive and later
// die, keeping track as well as automatically synchronizing at start and after
// reconnects. Please note that not the whole container lifecycle gets monitored
// but only the phase(s) where a container has either running or frozen
// container processes.
type watcher struct {
	engine engineclient.EngineClient // container engine (adaptor)

	pfmux          sync.RWMutex            // supports make-before-break during resync.
	readportfolio  *whalewatcher.Portfolio // portfolio as seen by object users.
	writeportfolio *whalewatcher.Portfolio // portfolio we're updating.

	eventgate      sync.Mutex // not a RWMutex as it doesn't buy us anything here.
	ongoinglisting bool       // a container list is in progress.
	bluenorwegians []string   // container IDs we know to have died while list in progress.
}

// NewWatcher returns a new Watcher tracking alive containers as they come and
// go, using the specified container EngineClient.
func NewWatcher(engine engineclient.EngineClient) Watcher {
	pf := whalewatcher.NewPortfolio()
	return &watcher{
		engine:         engine,
		readportfolio:  pf,
		writeportfolio: pf,
	}
}

// Portfolio returns the current portfolio for reading. During resynchronization
// with a container engine this can be the buffered portfolio until the watcher
// has caught up with the new state after an engine reconnect. For this reason
// callers must not keep the returned Portfolio reference for longer periods of
// time, but just for what they immediately need to query a Portfolio for.
func (ww *watcher) Portfolio() *whalewatcher.Portfolio {
	ww.pfmux.RLock()
	defer ww.pfmux.RUnlock()
	return ww.readportfolio
}

// ID returns the (more or less) unique engine identifier; the exact format is
// engine-specific.
func (ww *watcher) ID(ctx context.Context) string {
	return ww.engine.ID(ctx)
}

// Close cleans up and release any underlying engine client resources, if
// necessary.
func (ww *watcher) Close() {
	ww.engine.Close()
}

// Watch synchronizes the Portfolio to the connected container engine's state
// with respect to alive containers and then continuously watches for changes.
// Watch only returns after the specified context has been cancelled. It will
// automatically reconnect in case of loss of connection to the connected
// container engine.
func (ww *watcher) Watch(ctx context.Context) {
	for {
		// In case we have an existing and non-empty portfolio, keep that
		// visible to our users while we try to synchronize. If not, then simply
		// go "live" immediately.
		ww.pfmux.Lock()
		if ww.writeportfolio.ContainerTotal() != 0 {
			ww.writeportfolio = whalewatcher.NewPortfolio()
		}
		if ww.readportfolio.ContainerTotal() == 0 {
			ww.readportfolio = ww.writeportfolio
		}
		ww.pfmux.Unlock()
		// Start receiving container-related events and also fire off a list of
		// containers query.
		evs, errs := ww.engine.LifecycleEvents(ctx)
		go func() {
			ww.list(ctx)
			// Bring the synchronized portfolio "online" so that object users
			// can now see the current portfolio and not the "still".
			ww.pfmux.Lock()
			ww.readportfolio = ww.writeportfolio
			ww.pfmux.Unlock()
		}()
		var err error
	listentoevents:
		for {
			select {
			case err = <-errs:
				// The reason of a cancelled context has been flattened into the
				// client's event stream error, grrr. We thus first check on a
				// cancelled context in case of any event stream error and let
				// that take priority.
				if ctx.Err() == context.Canceled {
					err = ctx.Err()
				}
				break listentoevents
			case ev := <-evs:
				if ev.Born {
					ww.born(ctx, ev.ID)
				} else {
					ww.demised(ev.ID, ev.Project)
				}
			}
		}
		// The event flow may have ceased either because (1) the context was
		// cancelled or (2) the Docker daemon has disconnected. In case of (2)
		// we want to retry. In case of (1) that's the signal to us that our
		// work's done.
		if err == context.Canceled {
			return
		}
		// Crude rate limiter
		time.Sleep(time.Second * 1)
	}
}

// born adds a single container (identified by its unique ID) to our set of
// known live and kicking containers. As we want to store some container details
// (such as container's initial process PID, project, ...).
//
// Note bene: this is just a thin wrapper to mainly ease unit testing.
func (ww *watcher) born(ctx context.Context, id string) {
	cntr, err := ww.engine.Inspect(ctx, id)
	if err == nil {
		// The portfolio already properly handles concurrency operations, so we
		// don't need to take any special care here. However, as we're
		// potentially juggling portfolios around while resynchronizing after
		// loss of the event stream, we must lock access to the correct
		// portfolio for a short period of time.
		ww.pfmux.RLock()
		pf := ww.writeportfolio
		ww.pfmux.RUnlock()
		pf.Add(cntr)
	}
}

// demised removes the "permanently sleeping" container with the specified ID
// from our container portfolio, ensuring it won't pop up again due to an
// overlapping list scan.
func (ww *watcher) demised(id string, projectname string) {
	// The "event gate" does not only serializes access to the shared state
	// between the container lifecycle event handler and the container listing
	// one-shot go routine, it also serializes container termination lifecycle
	// events against adding the results of a container list scan, so that
	// adding list results becomes "atomic".
	//
	// Notice that we don't defer the unlock as we don't want to carry out the
	// final removal of the container from our portfolio while still under our
	// gating mutex. We want to keep the lock as short as possible.
	ww.eventgate.Lock()
	// While a full container listing is in progress, we need to remember all
	// the dead containers seen during this phase in order to not accidentally
	// adding them back in case listing and deceasing overlap in unfortunate
	// ways.
	if ww.ongoinglisting {
		ww.bluenorwegians = append(ww.bluenorwegians, id)
	}
	ww.eventgate.Unlock()
	ww.pfmux.RLock()
	pf := ww.writeportfolio
	ww.pfmux.RUnlock()
	pf.Remove(id, projectname)
}

// list scans for currently alive and kicking containers and then adds the
// containers found to our container portfolio.
func (ww *watcher) list(ctx context.Context) {
	// In case any container(s) die while our container list is in progress,
	// make sure to pile up their IDs so we later can skip any already dead
	// containers. This is necessary as while container lifecycle-related events
	// (especially "start" and "die") are properly ordered, fake "start" events
	// from listing containers aren't synchronized and properly ordered with
	// respect to the event log.
	ww.eventgate.Lock()
	ww.ongoinglisting = true
	ww.eventgate.Unlock()
	// Now try to scan the currently available containers and take only the
	// alive into further consideration. This is a potentially lengthy
	// operation, as we need to inspect each potential candidate individually
	// due to the way container engine APIs tend to be designed.
	alives, err := ww.engine.List(ctx)
	if err != nil {
		return // list? what list??
	}
	// We now lock out any competing container demise events so we can update
	// the portfolio from the list scan results atomically, but still taking
	// into account all those containers that have gone in the time frame where
	// we scanned for alive containers.
	ww.eventgate.Lock()
	defer func() {
		ww.bluenorwegians = []string{}
		ww.ongoinglisting = false // not strictly necessary here, but anywhere within the gated zone.
		ww.eventgate.Unlock()
	}()
	ww.pfmux.RLock()
	pf := ww.writeportfolio
	ww.pfmux.RUnlock()
nextpet:
	for _, alive := range alives {
		// Did the container die in between...? Then skip it and get another pet.
		for _, bluenorwegian := range ww.bluenorwegians {
			if bluenorwegian == alive.ID {
				continue nextpet
			}
		}
		// Otherwise, add it to our portfolio; this is "quick" operation without
		// any trips to the container engine (we already did the "slow" and
		// time-consuming bits before).
		pf.Add(alive)
	}
	// Tumble into defer'red clearing the list of dead parrots and carrying on.
}
